--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -74,9 +74,9 @@
     },
     {
       "login": "getsolaris",
-      "name": "Mingeun Kim",
+      "name": "getsolaris",
       "avatar_url": "https://avatars2.githubusercontent.com/u/19664237?v=4",
-      "profile": "https://mingeun.com",
+      "profile": "https://getsolaris.kr",
       "contributions": [
         "doc"
       ]
